manifests/seraphim/prod/monitoring/HTTPRoute-vmagent.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  name: vmagent
  namespace: monitoring
spec:
  hostnames:
    - vm.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: vmagent-vm-victoria-metrics-k8s-stack
          port: 8429
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
